; ModuleID = '/home/carl/AnghaBench/linux/net/sctp/extr_proc.c_sctp_eps_seq_start.c'
source_filename = "/home/carl/AnghaBench/linux/net/sctp/extr_proc.c_sctp_eps_seq_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }

@sctp_ep_hashsize = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [57 x i8] c" ENDPT     SOCK   STY SST HBKT LPORT   UID INODE LADDRS\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.seq_file*, i64*)* @sctp_eps_seq_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @sctp_eps_seq_start(%struct.seq_file* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca i64*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %4, align 8
  store i64* %1, i64** %5, align 8
  %6 = load i64*, i64** %5, align 8
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @sctp_ep_hashsize, align 8
  %9 = icmp sge i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %27

11:                                               ; preds = %2
  %12 = load i64*, i64** %5, align 8
  %13 = load i64, i64* %12, align 8
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = load i64*, i64** %5, align 8
  store i64 0, i64* %16, align 8
  br label %17

17:                                               ; preds = %15, %11
  %18 = load i64*, i64** %5, align 8
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %17
  %22 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %23 = call i32 @seq_printf(%struct.seq_file* %22, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %21, %17
  %25 = load i64*, i64** %5, align 8
  %26 = bitcast i64* %25 to i8*
  store i8* %26, i8** %3, align 8
  br label %27

27:                                               ; preds = %24, %10
  %28 = load i8*, i8** %3, align 8
  ret i8* %28
}

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
